test/invalid/range_too_many_args.py
# range() with too many arguments
def main() -> None:
    r = range(0, 10, 1, 2)  # range() takes 1 to 3 arguments
